Canvas can now dynamically resize without blurring issues

--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@ height:auto The default. This means the element will have flexible height i.e. i
 /* base CSS */
 
 body {
-    font-size:125%;
-    line-height:1.125em; /* 16×1.125=18 */
+    font-size: 125%;
+    line-height: 150%
     color: #34495e;
 }.bodytext p {
     font-size:0.875em;
